--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   backend:
     build: .
     container_name: backend
+    volumes:
+      - .:/app/
     env_file:
       - .env
     ports:
@@ -11,7 +13,7 @@ services:
     restart: always
     depends_on:
       - postgres
-    command: uvicorn --host 0.0.0.0 --port 8000 --reload
+    command: uvicorn src.app:app --host 0.0.0.0 --port 8000 --reload
   postgres:
     image: postgres:14-alpine
     container_name: postgres
@@ -20,7 +22,6 @@ services:
       - pgdata:/var/lib/postgresql/data
     env_file:
       - .env
-
 
 volumes:
   pgdata:
