--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ SQLAlchemy = {extras = ["async"], version = "^1.4.41"}
 uvicorn = {extras = ["standard"], version = "^0.18.3"}
 alembic = "^1.8.1"
 asyncpg = "^0.26.0"
+pydantic = {extras = ["email"], version = "^1.10.2"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
@@ -20,13 +21,33 @@ pytest-xdist = "^2.5.0"
 isort = "^5.10.1"
 black = "^22.8.0"
 
+[tool.poetry.group.dev.dependencies]
+coverage = "^6.4.4"
+
 [tool.black]
 line-length = 119
+exclude = '''
+/(
+    \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.env
+  | \.venv
+  | venv
+  | env
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
 
 [tool.isort]
 profile = "black"
 line_length = 119
 lines_after_imports = 2
+skip_glob = ["**/env/*"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
