--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ uvicorn = {extras = ["standard"], version = "^0.18.3"}
 alembic = "^1.8.1"
 asyncpg = "^0.26.0"
 pydantic = {extras = ["email"], version = "^1.10.2"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+psycopg2 = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
@@ -23,6 +25,7 @@ black = "^22.8.0"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^6.4.4"
+pytest-asyncio = "^0.19.0"
 
 [tool.black]
 line-length = 119
