--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,16 +16,14 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 psycopg2 = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
+coverage = "^6.4.4"
+pytest-asyncio = "^0.19.0"
 pytest = "^7.1.3"
 pytest-mock = "^3.9.0"
-pytest_async = "^0.1.1"
 pytest-xdist = "^2.5.0"
 isort = "^5.10.1"
 black = "^22.8.0"
-
-[tool.poetry.group.dev.dependencies]
-coverage = "^6.4.4"
-pytest-asyncio = "^0.19.0"
+pytest-cov = "^4.0.0"
 
 [tool.black]
 line-length = 119
@@ -50,7 +48,19 @@ exclude = '''
 profile = "black"
 line_length = 119
 lines_after_imports = 2
+multi_line_output = 3
+force_grid_wrap = 2
 skip_glob = ["**/env/*"]
+
+[tool.pytest.ini_options]
+addopts = "-v --asyncio-mode auto --cov=."
+testpaths = ["tests"]
+filterwarnings = [
+    "ignore::sqlalchemy.exc.SAWarning"
+]
+markers = [
+    "integration: run integration tests"
+]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
