--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,17 +13,18 @@ alembic = "^1.8.1"
 asyncpg = "^0.26.0"
 pydantic = {extras = ["email"], version = "^1.10.2"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
-psycopg2 = "^2.9.3"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 
 [tool.poetry.dev-dependencies]
+black = "^22.8.0"
 coverage = "^6.4.4"
-pytest-asyncio = "^0.19.0"
+isort = "^5.10.1"
+psycopg2 = "^2.9.3"
 pytest = "^7.1.3"
+pytest-cov = "^4.0.0"
+pytest-asyncio = "^0.19.0"
 pytest-mock = "^3.9.0"
 pytest-xdist = "^2.5.0"
-isort = "^5.10.1"
-black = "^22.8.0"
-pytest-cov = "^4.0.0"
 
 [tool.black]
 line-length = 119
