--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ asyncpg = "^0.26.0"
 pydantic = {extras = ["email"], version = "^1.10.2"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+python-multipart = "^0.0.5"
 
 [tool.poetry.dev-dependencies]
 black = "^22.8.0"
