--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pydantic = {extras = ["email"], version = "^1.10.2"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 python-multipart = "^0.0.5"
+GeoAlchemy2 = "^0.12.5"
 
 [tool.poetry.dev-dependencies]
 black = "^22.8.0"
