--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     restart: always
     depends_on:
       - postgres
+      - redis
     command: uvicorn src.app:app --host 0.0.0.0 --port 8000 --reload
 
   postgres:
@@ -24,5 +25,15 @@ services:
     env_file:
       - .env
 
+  redis:
+    image: redis:7-alpine
+    container_name: redis
+    restart: always
+    ports:
+      - "6379:6379"
+    volumes:
+      - redisdata:/data
+
 volumes:
   pgdata:
+  redisdata:
